--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,10 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MovieDetails" />
-        <activity android:name=".DetailsActivity"
-            android:label="Details"
-            ></activity>
+        <activity
+            android:name=".DetailsActivity"
+            android:label="Details" />
+        <activity android:name=".sort" />
+        <activity android:name=".Main2Activity" />
     </application>
 
 </manifest>
